--- a/book/pom.xml
+++ b/book/pom.xml
@@ -40,6 +40,8 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<!-- These values are copied from the project being documented -->
 		<documented.groupId>com.semanticcms</documented.groupId>
 		<documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
+		<documented.javaVersion>1.6</documented.javaVersion>
+		<documented.javac.link.javaApi>${javac.link.javaApi.jdk16}</documented.javac.link.javaApi>
 		<documented.name>SemanticCMS Theme Documentation</documented.name>
 		<documented.shortTitle>Theme Documentation</documented.shortTitle>
 		<documented.url>https://semanticcms.com/theme-documentation/</documented.url>
@@ -100,6 +102,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 					<artifactId>jstl-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.aoindustries</groupId>
+			<artifactId>ao-badges</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
