--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.aoindustries</groupId>
 			<artifactId>ao-taglib</artifactId>
-			<version>2.3.1-SNAPSHOT</version>
+			<version>2.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
