--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-servlet</artifactId>
-			<version>1.10.1-SNAPSHOT</version>
+			<version>1.11.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
