--- a/pom.xml
+++ b/pom.xml
@@ -161,25 +161,25 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-theme-base</artifactId>
-			<version>1.2.2-SNAPSHOT</version>
+			<version>1.2.2</version>
 		</dependency>
 		<!-- TODO: Remove this dependency once "Edit" is its own view -->
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-file-taglib</artifactId>
-			<version>1.5.3-SNAPSHOT</version>
+			<version>1.5.3</version>
 		</dependency>
 		<!-- TODO: Once central "devMode" defined, remove this optional dependency -->
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-openfile-servlet</artifactId>
-			<version>1.5.3-SNAPSHOT</version>
+			<version>1.5.3</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-pagegraph</artifactId>
-			<version>1.3.3-SNAPSHOT</version>
+			<version>1.3.3</version>
 		</dependency>
 	</dependencies>
 </project>
