--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-theme-base</artifactId>
-			<version>1.2.3-validation-SNAPSHOT</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<!-- TODO: Remove this dependency once "Edit" is its own view -->
 		<dependency>
