--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-openfile-servlet</artifactId>
-			<version>1.5.4-validation-SNAPSHOT</version>
+			<version>2.0.0-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
