--- a/book/pom.xml
+++ b/book/pom.xml
@@ -120,6 +120,11 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-pages-jspx</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-taglib</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
