--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
 									<link>https://aoindustries.com/aocode-public/apidocs/</link>
 									<link>https://semanticcms.com/core/model/apidocs/</link>
-									<link>https://semanticcms.com/core/servlet/apidocs/</link>
+									<link>https://semanticcms.com/core/renderer/html/apidocs/</link>
 									<link>https://semanticcms.com/core/taglib/apidocs/</link>
 									<link>https://semanticcms.com/core/theme-base/apidocs/</link>
 									<link>https://semanticcms.com/file/taglib/apidocs/</link>
@@ -151,7 +151,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
-			<artifactId>semanticcms-core-servlet</artifactId>
+			<artifactId>semanticcms-core-renderer-html</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -180,7 +180,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-pagegraph</artifactId>
-			<version>1.3.4-validation-SNAPSHOT</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
