--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 								<links>
 									<link>${javac.link.javaApi}</link>
 									<link>${javac.link.javaeeApi.6}</link>
+									<link>https://aoindustries.com/ao-servlet-firewall/webjars/apidocs/</link>
 									<link>https://aoindustries.com/ao-net-path-space/apidocs/</link>
 									<link>https://aoindustries.com/ao-servlet-firewall/path-space/apidocs/</link>
 									<link>https://aoindustries.com/ao-servlet-firewall/rules/apidocs/</link>
@@ -115,6 +116,10 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 					<groupId>javax.servlet.jsp.jstl</groupId><artifactId>jstl-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<!-- Open servlet firewall for /webjars/*** -->
+		<dependency>
+			<groupId>com.aoindustries</groupId><artifactId>ao-servlet-firewall-webjars</artifactId><version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars</groupId><artifactId>jquery</artifactId><version>2.2.4</version>
