--- a/book/pom.xml
+++ b/book/pom.xml
@@ -34,8 +34,7 @@ along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/lic
 
 	<properties>
 		<!-- These values are copied from the project being documented -->
-		<documented.groupId>com.semanticcms</documented.groupId>
-		<documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
+		<documented.groupId>com.semanticcms</documented.groupId><documented.artifactId>semanticcms-theme-documentation</documented.artifactId>
 		<documented.javaVersion>1.6</documented.javaVersion>
 		<documented.javac.link.javaApi>${javac.link.javaApi.jdk16}</documented.javac.link.javaApi>
 		<documented.name>SemanticCMS 1 Theme Documentation</documented.name>
